react-app/src/components/EditEventForm/EditEventForm.module.css
.form {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    position: absolute;


    font-size: 0.8rem;
    font-weight: 500;
    padding: 1rem;
    min-width: fit-content;
    width: 100%;
}


.form i {
    margin-left: 0.8rem;
    margin-right: 0.8rem;
    font-size: 1rem;
}

.form span {
    margin: 0 0.5rem
}

.form input {
    width: 100%;
    outline: none;
    padding: 0.5rem 0.3rem;
    border-bottom: 2px solid white;
}

.form select {
    padding: 0.5rem 0.3rem;
    cursor: pointer;
}

.form select:focus {
    outline: none;
}

.form input:focus {
    border-bottom: 2px solid rgba(107, 178, 156, 0.7);
}

.topContainer {
    display: grid;
    grid-auto-columns: 1fr;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-template-areas:
        ". .";
}

.button i {
    border: none;
    text-decoration: none;
    font-size: 1rem;
    border-radius: 60%;
    padding: 0.7rem 0.8rem;
    margin-right: 0.5rem;
    margin-left: 0;
    background-color: #EDEDED;
}

.title {
    display: flex;
}

.title i {
    font-size: 1rem;
}

.title input {
    border: none;
    border-bottom: 2px solid rgba(34, 34, 34, 0.15);
    font-size: 1.5rem;
    font-weight: 500;
    width: 94%;
    padding-bottom: 0.3rem;
}

.datetime {
    display: flex;
    align-items: center;
    min-width: fit-content;
    margin-left: 2.5rem;
}

.datetime * {
    border-radius: 0.3rem;
}

.datetime input {
    background-color: #f7f7f7;
    border: none;
    border-bottom: 1px solid rgba(247, 247, 247, 1);
    width: fit-content;
}

.datePicker {
    display: flex;
    flex-direction: column;
    min-width: fit-content;
}

.datePickerInput {
    display: flex;
    align-items: center;
    min-width: fit-content;
}

.timePicker {
    margin: 0 0.5rem;
    min-width: fit-content;
}

.moreOptions {
    row-gap: 0.5rem;
    display: flex;
    align-items: center;
}

.allDay {
    display: flex;
    gap: 0.3rem;
    margin-left: 2.5rem;
}

.allDay input {
    width: 1.5rem;
    cursor: pointer;
}

.recurrence select {
    background-color: #f7f7f7;
    border: none;
    padding: 0.5rem 0.3rem;
    margin-left: 0.5rem;
    border-radius: 0.3rem;
}


.eventDetail {
    display: flex;
    flex-direction: column;
    row-gap: 0.5rem;
    min-width: 50vw;
    max-width: 30rem;
}

.eventDetail * {
    border-radius: 0.3rem;
}

.address {
    display: flex;
    align-items: center;
    border: none;
    border-bottom: 2px solid white;
}

.address input {
    background-color: #f7f7f7;
}

.calendars select {
    border: none;
    background-color: #f7f7f7;
}

.description {
    display: flex;
    align-items: flex-start;
}

.description textarea {
    border: none;
    outline: none;
    background-color: #f7f7f7;
    width: 100%;
    height: 8rem;
    padding: 0.3rem;
}

.submitButton {
    align-self: end;
    color: white;
    background-color: rgba(107, 178, 156, 1);
    border-radius: 0.2rem;
    padding: 0.5rem 1rem;
    margin-left: 0.5rem;
    width: fit-content;
}

